LayoutView gets an initial layout.

Bug: 795661
Change-Id: I3e7984b2f4cd012056e964114a803b484da584f1